ProjetoBase/compilador.output
Estado 25 conflitos: 2 de deslocamento/redução, 1 de redução/redução


Gramática

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: $@1 PROGRAM IDENT parametros_ou_vazio PONTO_E_VIRGULA bloco PONTO

    3 parametros_ou_vazio: parametros
    4                    | comando_vazio

    5 parametros: ABRE_PARENTESES lista_idents FECHA_PARENTESES

    6 tipo: INTEGER

    7 $@2: %empty

    8 bloco: parte_declara_vars parte_declara_sub_rotinas $@2 comando_composto

    9 parte_declara_vars: var

   10 parte_declara_sub_rotinas: parte_declara_sub_rotinas opcoes_sub_rotinas
   11                          | comando_vazio

   12 opcoes_sub_rotinas: declaracao_procedimento PONTO_E_VIRGULA
   13                   | declaracao_funcao PONTO_E_VIRGULA
   14                   | comando_vazio

   15 var: VAR declara_vars
   16    | declara_vars

   17 declara_vars: declara_vars declara_var
   18             | declara_var

   19 $@3: %empty

   20 $@4: %empty

   21 declara_var: $@3 lista_id_var DOIS_PONTOS tipo $@4 PONTO_E_VIRGULA

   22 lista_id_var: lista_id_var VIRGULA IDENT
   23             | IDENT

   24 lista_idents: lista_idents VIRGULA IDENT
   25             | IDENT

   26 $@5: %empty

   27 $@6: %empty

   28 $@7: %empty

   29 $@8: %empty

   30 declaracao_procedimento: PROCEDURE $@5 IDENT $@6 $@7 parametros_formais_vazio PONTO_E_VIRGULA $@8 bloco

   31 declaracao_funcao: FUNCTION IDENT parametros_formais_vazio DOIS_PONTOS tipo PONTO_E_VIRGULA bloco

   32 parametros_formais_vazio: parametros_formais
   33                         | comando_vazio

   34 $@9: %empty

   35 parametros_formais: ABRE_PARENTESES $@9 lista_parametros_formais FECHA_PARENTESES

   36 lista_parametros_formais: lista_parametros_formais PONTO_E_VIRGULA secao_parametros_formais

   37 $@10: %empty

   38 lista_parametros_formais: $@10 secao_parametros_formais

   39 $@11: %empty

   40 $@12: %empty

   41 secao_parametros_formais: $@11 var_vazio $@12 lista_idents DOIS_PONTOS tipo

   42 var_vazio: VAR
   43          | comando_vazio

   44 comando_composto: T_BEGIN comandos T_END

   45 comandos: comandos PONTO_E_VIRGULA comando
   46         | comando

   47 comando: numero_ou_vazio comando_sem_rotulo

   48 numero_ou_vazio: numero DOIS_PONTOS
   49                | comando_vazio

   50 comando_vazio: %empty

   51 comando_sem_rotulo: variavel atribuicao_procedimento
   52                   | desvio
   53                   | comando_composto
   54                   | comando_condicional
   55                   | comando_repetitivo
   56                   | leitura
   57                   | escrita

   58 desvio: %empty

   59 comando_condicional: if_then cond_else

   60 $@13: %empty

   61 if_then: IF expressao $@13 THEN comando_sem_rotulo

   62 $@14: %empty

   63 cond_else: ELSE $@14 else_multiplo_unico

   64 else_multiplo_unico: comando_sem_rotulo

   65 $@15: %empty

   66 $@16: %empty

   67 $@17: %empty

   68 chama_procedimento: $@15 ABRE_PARENTESES $@16 lista_expressoes_ou_vazio FECHA_PARENTESES $@17

   69 $@18: %empty

   70 chama_procedimento: $@18

   71 lista_expressoes_ou_vazio: lista_expressoes
   72                          | comando_vazio

   73 $@19: %empty

   74 $@20: %empty

   75 comando_repetitivo: WHILE $@19 expressao DO $@20 comando_composto

   76 lista_expressoes: expressao
   77                 | expressao VIRGULA lista_expressoes

   78 $@21: %empty

   79 expressao: $@21 expressao_simples relacao_exp_simples_ou_vazio

   80 relacao_exp_simples_ou_vazio: relacao expressao_simples
   81                             | comando_vazio

   82 relacao: IGUAL
   83        | DIFERENTE
   84        | MENOR
   85        | MENOR_IGUAL
   86        | MAIOR_IGUAL
   87        | MAIOR

   88 expressao_simples: soma_ou_vazio expressao_lista_termo

   89 soma_ou_vazio: SOMA
   90              | SUBTRACAO
   91              | comando_vazio

   92 expressao_lista_termo: expressao_lista_termo lista_termo
   93                      | termo

   94 lista_termo: SOMA termo
   95            | SUBTRACAO termo
   96            | OR termo

   97 termo: termo lista_fator
   98      | fator

   99 lista_fator: MULTIPLICACAO fator
  100            | DIVISAO fator
  101            | DIV fator
  102            | AND fator

  103 fator: variavel

  104 $@22: %empty

  105 fator: variavel ABRE_PARENTESES $@22 lista_expressoes FECHA_PARENTESES
  106      | numero
  107      | ABRE_PARENTESES expressao FECHA_PARENTESES
  108      | NOT fator

  109 atribuicao_procedimento: atribuicao
  110                        | chama_procedimento

  111 atribuicao: ATRIBUICAO expressao

  112 variavel: IDENT

  113 numero: NUMERO

  114 leitura: READ ABRE_PARENTESES lista_leitura FECHA_PARENTESES

  115 lista_leitura: lista_leitura VIRGULA simbolo_leitura
  116              | simbolo_leitura

  117 simbolo_leitura: IDENT

  118 escrita: WRITE ABRE_PARENTESES lista_escrita FECHA_PARENTESES

  119 lista_escrita: lista_escrita VIRGULA expressao
  120              | expressao


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    PROGRAM (258) 2
    ABRE_PARENTESES (259) 5 35 68 105 107 114 118
    FECHA_PARENTESES (260) 5 35 68 105 107 114 118
    VIRGULA (261) 22 24 77 115 119
    PONTO_E_VIRGULA (262) 2 12 13 21 30 31 36 45
    DOIS_PONTOS (263) 21 31 41 48
    PONTO (264) 2
    T_BEGIN (265) 44
    T_END (266) 44
    VAR (267) 15 42
    IDENT (268) 2 22 23 24 25 30 31 112 117
    ATRIBUICAO (269) 111
    INTEGER (270) 6
    WHILE (271) 75
    DO (272) 75
    IF (273) 61
    THEN (274) 61
    ELSE (275) 63
    MAIOR (276) 87
    MENOR (277) 84
    MAIOR_IGUAL (278) 86
    MENOR_IGUAL (279) 85
    IGUAL (280) 82
    DIFERENTE (281) 83
    SOMA (282) 89 94
    SUBTRACAO (283) 90 95
    MULTIPLICACAO (284) 99
    DIVISAO (285) 100
    DIV (286) 101
    NUMERO (287) 113
    READ (288) 114
    WRITE (289) 118
    OR (290) 96
    AND (291) 102
    NOT (292) 108
    PROCEDURE (293) 30
    FUNCTION (294) 31


Não terminais com as regras onde eles aparecem

    $accept (40)
        à esquerda: 0
    programa (41)
        à esquerda: 2
        à direita: 0
    $@1 (42)
        à esquerda: 1
        à direita: 2
    parametros_ou_vazio (43)
        à esquerda: 3 4
        à direita: 2
    parametros (44)
        à esquerda: 5
        à direita: 3
    tipo (45)
        à esquerda: 6
        à direita: 21 31 41
    bloco (46)
        à esquerda: 8
        à direita: 2 30 31
    $@2 (47)
        à esquerda: 7
        à direita: 8
    parte_declara_vars (48)
        à esquerda: 9
        à direita: 8
    parte_declara_sub_rotinas (49)
        à esquerda: 10 11
        à direita: 8 10
    opcoes_sub_rotinas (50)
        à esquerda: 12 13 14
        à direita: 10
    var (51)
        à esquerda: 15 16
        à direita: 9
    declara_vars (52)
        à esquerda: 17 18
        à direita: 15 16 17
    declara_var (53)
        à esquerda: 21
        à direita: 17 18
    $@3 (54)
        à esquerda: 19
        à direita: 21
    $@4 (55)
        à esquerda: 20
        à direita: 21
    lista_id_var (56)
        à esquerda: 22 23
        à direita: 21 22
    lista_idents (57)
        à esquerda: 24 25
        à direita: 5 24 41
    declaracao_procedimento (58)
        à esquerda: 30
        à direita: 12
    $@5 (59)
        à esquerda: 26
        à direita: 30
    $@6 (60)
        à esquerda: 27
        à direita: 30
    $@7 (61)
        à esquerda: 28
        à direita: 30
    $@8 (62)
        à esquerda: 29
        à direita: 30
    declaracao_funcao (63)
        à esquerda: 31
        à direita: 13
    parametros_formais_vazio (64)
        à esquerda: 32 33
        à direita: 30 31
    parametros_formais (65)
        à esquerda: 35
        à direita: 32
    $@9 (66)
        à esquerda: 34
        à direita: 35
    lista_parametros_formais (67)
        à esquerda: 36 38
        à direita: 35 36
    $@10 (68)
        à esquerda: 37
        à direita: 38
    secao_parametros_formais (69)
        à esquerda: 41
        à direita: 36 38
    $@11 (70)
        à esquerda: 39
        à direita: 41
    $@12 (71)
        à esquerda: 40
        à direita: 41
    var_vazio (72)
        à esquerda: 42 43
        à direita: 41
    comando_composto (73)
        à esquerda: 44
        à direita: 8 53 75
    comandos (74)
        à esquerda: 45 46
        à direita: 44 45
    comando (75)
        à esquerda: 47
        à direita: 45 46
    numero_ou_vazio (76)
        à esquerda: 48 49
        à direita: 47
    comando_vazio (77)
        à esquerda: 50
        à direita: 4 11 14 33 43 49 72 81 91
    comando_sem_rotulo (78)
        à esquerda: 51 52 53 54 55 56 57
        à direita: 47 61 64
    desvio (79)
        à esquerda: 58
        à direita: 52
    comando_condicional (80)
        à esquerda: 59
        à direita: 54
    if_then (81)
        à esquerda: 61
        à direita: 59
    $@13 (82)
        à esquerda: 60
        à direita: 61
    cond_else (83)
        à esquerda: 63
        à direita: 59
    $@14 (84)
        à esquerda: 62
        à direita: 63
    else_multiplo_unico (85)
        à esquerda: 64
        à direita: 63
    chama_procedimento (86)
        à esquerda: 68 70
        à direita: 110
    $@15 (87)
        à esquerda: 65
        à direita: 68
    $@16 (88)
        à esquerda: 66
        à direita: 68
    $@17 (89)
        à esquerda: 67
        à direita: 68
    $@18 (90)
        à esquerda: 69
        à direita: 70
    lista_expressoes_ou_vazio (91)
        à esquerda: 71 72
        à direita: 68
    comando_repetitivo (92)
        à esquerda: 75
        à direita: 55
    $@19 (93)
        à esquerda: 73
        à direita: 75
    $@20 (94)
        à esquerda: 74
        à direita: 75
    lista_expressoes (95)
        à esquerda: 76 77
        à direita: 71 77 105
    expressao (96)
        à esquerda: 79
        à direita: 61 75 76 77 107 111 119 120
    $@21 (97)
        à esquerda: 78
        à direita: 79
    relacao_exp_simples_ou_vazio (98)
        à esquerda: 80 81
        à direita: 79
    relacao (99)
        à esquerda: 82 83 84 85 86 87
        à direita: 80
    expressao_simples (100)
        à esquerda: 88
        à direita: 79 80
    soma_ou_vazio (101)
        à esquerda: 89 90 91
        à direita: 88
    expressao_lista_termo (102)
        à esquerda: 92 93
        à direita: 88 92
    lista_termo (103)
        à esquerda: 94 95 96
        à direita: 92
    termo (104)
        à esquerda: 97 98
        à direita: 93 94 95 96 97
    lista_fator (105)
        à esquerda: 99 100 101 102
        à direita: 97
    fator (106)
        à esquerda: 103 105 106 107 108
        à direita: 98 99 100 101 102 108
    $@22 (107)
        à esquerda: 104
        à direita: 105
    atribuicao_procedimento (108)
        à esquerda: 109 110
        à direita: 51
    atribuicao (109)
        à esquerda: 111
        à direita: 109
    variavel (110)
        à esquerda: 112
        à direita: 51 103 105
    numero (111)
        à esquerda: 113
        à direita: 48 106
    leitura (112)
        à esquerda: 114
        à direita: 56
    lista_leitura (113)
        à esquerda: 115 116
        à direita: 114 115
    simbolo_leitura (114)
        à esquerda: 117
        à direita: 115 116
    escrita (115)
        à esquerda: 118
        à direita: 57
    lista_escrita (116)
        à esquerda: 119 120
        à direita: 118 119


Estado 0

    0 $accept: • programa $end

    $padrão  reduzir usando a regra 1 ($@1)

    programa  ir ao estado 1
    $@1       ir ao estado 2


Estado 1

    0 $accept: programa • $end

    $end  deslocar, e ir ao estado 3


Estado 2

    2 programa: $@1 • PROGRAM IDENT parametros_ou_vazio PONTO_E_VIRGULA bloco PONTO

    PROGRAM  deslocar, e ir ao estado 4


Estado 3

    0 $accept: programa $end •

    $padrão  aceitar


Estado 4

    2 programa: $@1 PROGRAM • IDENT parametros_ou_vazio PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 5


Estado 5

    2 programa: $@1 PROGRAM IDENT • parametros_ou_vazio PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  deslocar, e ir ao estado 6

    $padrão  reduzir usando a regra 50 (comando_vazio)

    parametros_ou_vazio  ir ao estado 7
    parametros           ir ao estado 8
    comando_vazio        ir ao estado 9


Estado 6

    5 parametros: ABRE_PARENTESES • lista_idents FECHA_PARENTESES

    IDENT  deslocar, e ir ao estado 10

    lista_idents  ir ao estado 11


Estado 7

    2 programa: $@1 PROGRAM IDENT parametros_ou_vazio • PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  deslocar, e ir ao estado 12


Estado 8

    3 parametros_ou_vazio: parametros •

    $padrão  reduzir usando a regra 3 (parametros_ou_vazio)


Estado 9

    4 parametros_ou_vazio: comando_vazio •

    $padrão  reduzir usando a regra 4 (parametros_ou_vazio)


Estado 10

   25 lista_idents: IDENT •

    $padrão  reduzir usando a regra 25 (lista_idents)


Estado 11

    5 parametros: ABRE_PARENTESES lista_idents • FECHA_PARENTESES
   24 lista_idents: lista_idents • VIRGULA IDENT

    FECHA_PARENTESES  deslocar, e ir ao estado 13
    VIRGULA           deslocar, e ir ao estado 14


Estado 12

    2 programa: $@1 PROGRAM IDENT parametros_ou_vazio PONTO_E_VIRGULA • bloco PONTO

    VAR  deslocar, e ir ao estado 15

    $padrão  reduzir usando a regra 19 ($@3)

    bloco               ir ao estado 16
    parte_declara_vars  ir ao estado 17
    var                 ir ao estado 18
    declara_vars        ir ao estado 19
    declara_var         ir ao estado 20
    $@3                 ir ao estado 21


Estado 13

    5 parametros: ABRE_PARENTESES lista_idents FECHA_PARENTESES •

    $padrão  reduzir usando a regra 5 (parametros)


Estado 14

   24 lista_idents: lista_idents VIRGULA • IDENT

    IDENT  deslocar, e ir ao estado 22


Estado 15

   15 var: VAR • declara_vars

    $padrão  reduzir usando a regra 19 ($@3)

    declara_vars  ir ao estado 23
    declara_var   ir ao estado 20
    $@3           ir ao estado 21


Estado 16

    2 programa: $@1 PROGRAM IDENT parametros_ou_vazio PONTO_E_VIRGULA bloco • PONTO

    PONTO  deslocar, e ir ao estado 24


Estado 17

    8 bloco: parte_declara_vars • parte_declara_sub_rotinas $@2 comando_composto

    $padrão  reduzir usando a regra 50 (comando_vazio)

    parte_declara_sub_rotinas  ir ao estado 25
    comando_vazio              ir ao estado 26


Estado 18

    9 parte_declara_vars: var •

    $padrão  reduzir usando a regra 9 (parte_declara_vars)


Estado 19

   16 var: declara_vars •
   17 declara_vars: declara_vars • declara_var

    IDENT    reduzir usando a regra 19 ($@3)
    $padrão  reduzir usando a regra 16 (var)

    declara_var  ir ao estado 27
    $@3          ir ao estado 21


Estado 20

   18 declara_vars: declara_var •

    $padrão  reduzir usando a regra 18 (declara_vars)


Estado 21

   21 declara_var: $@3 • lista_id_var DOIS_PONTOS tipo $@4 PONTO_E_VIRGULA

    IDENT  deslocar, e ir ao estado 28

    lista_id_var  ir ao estado 29


Estado 22

   24 lista_idents: lista_idents VIRGULA IDENT •

    $padrão  reduzir usando a regra 24 (lista_idents)


Estado 23

   15 var: VAR declara_vars •
   17 declara_vars: declara_vars • declara_var

    IDENT    reduzir usando a regra 19 ($@3)
    $padrão  reduzir usando a regra 15 (var)

    declara_var  ir ao estado 27
    $@3          ir ao estado 21


Estado 24

    2 programa: $@1 PROGRAM IDENT parametros_ou_vazio PONTO_E_VIRGULA bloco PONTO •

    $padrão  reduzir usando a regra 2 (programa)


Estado 25

    8 bloco: parte_declara_vars parte_declara_sub_rotinas • $@2 comando_composto
   10 parte_declara_sub_rotinas: parte_declara_sub_rotinas • opcoes_sub_rotinas

    PROCEDURE  deslocar, e ir ao estado 30
    FUNCTION   deslocar, e ir ao estado 31

    T_BEGIN    reduzir usando a regra 7 ($@2)
    T_BEGIN    [reduzir usando a regra 50 (comando_vazio)]
    PROCEDURE  [reduzir usando a regra 50 (comando_vazio)]
    FUNCTION   [reduzir usando a regra 50 (comando_vazio)]
    $padrão    reduzir usando a regra 7 ($@2)

    $@2                      ir ao estado 32
    opcoes_sub_rotinas       ir ao estado 33
    declaracao_procedimento  ir ao estado 34
    declaracao_funcao        ir ao estado 35
    comando_vazio            ir ao estado 36


Estado 26

   11 parte_declara_sub_rotinas: comando_vazio •

    $padrão  reduzir usando a regra 11 (parte_declara_sub_rotinas)


Estado 27

   17 declara_vars: declara_vars declara_var •

    $padrão  reduzir usando a regra 17 (declara_vars)


Estado 28

   23 lista_id_var: IDENT •

    $padrão  reduzir usando a regra 23 (lista_id_var)


Estado 29

   21 declara_var: $@3 lista_id_var • DOIS_PONTOS tipo $@4 PONTO_E_VIRGULA
   22 lista_id_var: lista_id_var • VIRGULA IDENT

    VIRGULA      deslocar, e ir ao estado 37
    DOIS_PONTOS  deslocar, e ir ao estado 38


Estado 30

   30 declaracao_procedimento: PROCEDURE • $@5 IDENT $@6 $@7 parametros_formais_vazio PONTO_E_VIRGULA $@8 bloco

    $padrão  reduzir usando a regra 26 ($@5)

    $@5  ir ao estado 39


Estado 31

   31 declaracao_funcao: FUNCTION • IDENT parametros_formais_vazio DOIS_PONTOS tipo PONTO_E_VIRGULA bloco

    IDENT  deslocar, e ir ao estado 40


Estado 32

    8 bloco: parte_declara_vars parte_declara_sub_rotinas $@2 • comando_composto

    T_BEGIN  deslocar, e ir ao estado 41

    comando_composto  ir ao estado 42


Estado 33

   10 parte_declara_sub_rotinas: parte_declara_sub_rotinas opcoes_sub_rotinas •

    $padrão  reduzir usando a regra 10 (parte_declara_sub_rotinas)


Estado 34

   12 opcoes_sub_rotinas: declaracao_procedimento • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 43


Estado 35

   13 opcoes_sub_rotinas: declaracao_funcao • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 44


Estado 36

   14 opcoes_sub_rotinas: comando_vazio •

    $padrão  reduzir usando a regra 14 (opcoes_sub_rotinas)


Estado 37

   22 lista_id_var: lista_id_var VIRGULA • IDENT

    IDENT  deslocar, e ir ao estado 45


Estado 38

   21 declara_var: $@3 lista_id_var DOIS_PONTOS • tipo $@4 PONTO_E_VIRGULA

    INTEGER  deslocar, e ir ao estado 46

    tipo  ir ao estado 47


Estado 39

   30 declaracao_procedimento: PROCEDURE $@5 • IDENT $@6 $@7 parametros_formais_vazio PONTO_E_VIRGULA $@8 bloco

    IDENT  deslocar, e ir ao estado 48


Estado 40

   31 declaracao_funcao: FUNCTION IDENT • parametros_formais_vazio DOIS_PONTOS tipo PONTO_E_VIRGULA bloco

    ABRE_PARENTESES  deslocar, e ir ao estado 49

    $padrão  reduzir usando a regra 50 (comando_vazio)

    parametros_formais_vazio  ir ao estado 50
    parametros_formais        ir ao estado 51
    comando_vazio             ir ao estado 52


Estado 41

   44 comando_composto: T_BEGIN • comandos T_END

    NUMERO  deslocar, e ir ao estado 53

    $padrão  reduzir usando a regra 50 (comando_vazio)

    comandos         ir ao estado 54
    comando          ir ao estado 55
    numero_ou_vazio  ir ao estado 56
    comando_vazio    ir ao estado 57
    numero           ir ao estado 58


Estado 42

    8 bloco: parte_declara_vars parte_declara_sub_rotinas $@2 comando_composto •

    $padrão  reduzir usando a regra 8 (bloco)


Estado 43

   12 opcoes_sub_rotinas: declaracao_procedimento PONTO_E_VIRGULA •

    $padrão  reduzir usando a regra 12 (opcoes_sub_rotinas)


Estado 44

   13 opcoes_sub_rotinas: declaracao_funcao PONTO_E_VIRGULA •

    $padrão  reduzir usando a regra 13 (opcoes_sub_rotinas)


Estado 45

   22 lista_id_var: lista_id_var VIRGULA IDENT •

    $padrão  reduzir usando a regra 22 (lista_id_var)


Estado 46

    6 tipo: INTEGER •

    $padrão  reduzir usando a regra 6 (tipo)


Estado 47

   21 declara_var: $@3 lista_id_var DOIS_PONTOS tipo • $@4 PONTO_E_VIRGULA

    $padrão  reduzir usando a regra 20 ($@4)

    $@4  ir ao estado 59


Estado 48

   30 declaracao_procedimento: PROCEDURE $@5 IDENT • $@6 $@7 parametros_formais_vazio PONTO_E_VIRGULA $@8 bloco

    $padrão  reduzir usando a regra 27 ($@6)

    $@6  ir ao estado 60


Estado 49

   35 parametros_formais: ABRE_PARENTESES • $@9 lista_parametros_formais FECHA_PARENTESES

    $padrão  reduzir usando a regra 34 ($@9)

    $@9  ir ao estado 61


Estado 50

   31 declaracao_funcao: FUNCTION IDENT parametros_formais_vazio • DOIS_PONTOS tipo PONTO_E_VIRGULA bloco

    DOIS_PONTOS  deslocar, e ir ao estado 62


Estado 51

   32 parametros_formais_vazio: parametros_formais •

    $padrão  reduzir usando a regra 32 (parametros_formais_vazio)


Estado 52

   33 parametros_formais_vazio: comando_vazio •

    $padrão  reduzir usando a regra 33 (parametros_formais_vazio)


Estado 53

  113 numero: NUMERO •

    $padrão  reduzir usando a regra 113 (numero)


Estado 54

   44 comando_composto: T_BEGIN comandos • T_END
   45 comandos: comandos • PONTO_E_VIRGULA comando

    PONTO_E_VIRGULA  deslocar, e ir ao estado 63
    T_END            deslocar, e ir ao estado 64


Estado 55

   46 comandos: comando •

    $padrão  reduzir usando a regra 46 (comandos)


Estado 56

   47 comando: numero_ou_vazio • comando_sem_rotulo

    T_BEGIN  deslocar, e ir ao estado 41
    IDENT    deslocar, e ir ao estado 65
    WHILE    deslocar, e ir ao estado 66
    IF       deslocar, e ir ao estado 67
    READ     deslocar, e ir ao estado 68
    WRITE    deslocar, e ir ao estado 69

    $padrão  reduzir usando a regra 58 (desvio)

    comando_composto     ir ao estado 70
    comando_sem_rotulo   ir ao estado 71
    desvio               ir ao estado 72
    comando_condicional  ir ao estado 73
    if_then              ir ao estado 74
    comando_repetitivo   ir ao estado 75
    variavel             ir ao estado 76
    leitura              ir ao estado 77
    escrita              ir ao estado 78


Estado 57

   49 numero_ou_vazio: comando_vazio •

    $padrão  reduzir usando a regra 49 (numero_ou_vazio)


Estado 58

   48 numero_ou_vazio: numero • DOIS_PONTOS

    DOIS_PONTOS  deslocar, e ir ao estado 79


Estado 59

   21 declara_var: $@3 lista_id_var DOIS_PONTOS tipo $@4 • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 80


Estado 60

   30 declaracao_procedimento: PROCEDURE $@5 IDENT $@6 • $@7 parametros_formais_vazio PONTO_E_VIRGULA $@8 bloco

    $padrão  reduzir usando a regra 28 ($@7)

    $@7  ir ao estado 81


Estado 61

   35 parametros_formais: ABRE_PARENTESES $@9 • lista_parametros_formais FECHA_PARENTESES

    $padrão  reduzir usando a regra 37 ($@10)

    lista_parametros_formais  ir ao estado 82
    $@10                      ir ao estado 83


Estado 62

   31 declaracao_funcao: FUNCTION IDENT parametros_formais_vazio DOIS_PONTOS • tipo PONTO_E_VIRGULA bloco

    INTEGER  deslocar, e ir ao estado 46

    tipo  ir ao estado 84


Estado 63

   45 comandos: comandos PONTO_E_VIRGULA • comando

    NUMERO  deslocar, e ir ao estado 53

    $padrão  reduzir usando a regra 50 (comando_vazio)

    comando          ir ao estado 85
    numero_ou_vazio  ir ao estado 56
    comando_vazio    ir ao estado 57
    numero           ir ao estado 58


Estado 64

   44 comando_composto: T_BEGIN comandos T_END •

    $padrão  reduzir usando a regra 44 (comando_composto)


Estado 65

  112 variavel: IDENT •

    $padrão  reduzir usando a regra 112 (variavel)


Estado 66

   75 comando_repetitivo: WHILE • $@19 expressao DO $@20 comando_composto

    $padrão  reduzir usando a regra 73 ($@19)

    $@19  ir ao estado 86


Estado 67

   61 if_then: IF • expressao $@13 THEN comando_sem_rotulo

    $padrão  reduzir usando a regra 78 ($@21)

    expressao  ir ao estado 87
    $@21       ir ao estado 88


Estado 68

  114 leitura: READ • ABRE_PARENTESES lista_leitura FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 89


Estado 69

  118 escrita: WRITE • ABRE_PARENTESES lista_escrita FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 90


Estado 70

   53 comando_sem_rotulo: comando_composto •

    $padrão  reduzir usando a regra 53 (comando_sem_rotulo)


Estado 71

   47 comando: numero_ou_vazio comando_sem_rotulo •

    $padrão  reduzir usando a regra 47 (comando)


Estado 72

   52 comando_sem_rotulo: desvio •

    $padrão  reduzir usando a regra 52 (comando_sem_rotulo)


Estado 73

   54 comando_sem_rotulo: comando_condicional •

    $padrão  reduzir usando a regra 54 (comando_sem_rotulo)


Estado 74

   59 comando_condicional: if_then • cond_else

    ELSE  deslocar, e ir ao estado 91

    cond_else  ir ao estado 92


Estado 75

   55 comando_sem_rotulo: comando_repetitivo •

    $padrão  reduzir usando a regra 55 (comando_sem_rotulo)


Estado 76

   51 comando_sem_rotulo: variavel • atribuicao_procedimento

    ATRIBUICAO  deslocar, e ir ao estado 93

    ABRE_PARENTESES  reduzir usando a regra 65 ($@15)
    $padrão          reduzir usando a regra 69 ($@18)

    chama_procedimento       ir ao estado 94
    $@15                     ir ao estado 95
    $@18                     ir ao estado 96
    atribuicao_procedimento  ir ao estado 97
    atribuicao               ir ao estado 98


Estado 77

   56 comando_sem_rotulo: leitura •

    $padrão  reduzir usando a regra 56 (comando_sem_rotulo)


Estado 78

   57 comando_sem_rotulo: escrita •

    $padrão  reduzir usando a regra 57 (comando_sem_rotulo)


Estado 79

   48 numero_ou_vazio: numero DOIS_PONTOS •

    $padrão  reduzir usando a regra 48 (numero_ou_vazio)


Estado 80

   21 declara_var: $@3 lista_id_var DOIS_PONTOS tipo $@4 PONTO_E_VIRGULA •

    $padrão  reduzir usando a regra 21 (declara_var)


Estado 81

   30 declaracao_procedimento: PROCEDURE $@5 IDENT $@6 $@7 • parametros_formais_vazio PONTO_E_VIRGULA $@8 bloco

    ABRE_PARENTESES  deslocar, e ir ao estado 49

    $padrão  reduzir usando a regra 50 (comando_vazio)

    parametros_formais_vazio  ir ao estado 99
    parametros_formais        ir ao estado 51
    comando_vazio             ir ao estado 52


Estado 82

   35 parametros_formais: ABRE_PARENTESES $@9 lista_parametros_formais • FECHA_PARENTESES
   36 lista_parametros_formais: lista_parametros_formais • PONTO_E_VIRGULA secao_parametros_formais

    FECHA_PARENTESES  deslocar, e ir ao estado 100
    PONTO_E_VIRGULA   deslocar, e ir ao estado 101


Estado 83

   38 lista_parametros_formais: $@10 • secao_parametros_formais

    $padrão  reduzir usando a regra 39 ($@11)

    secao_parametros_formais  ir ao estado 102
    $@11                      ir ao estado 103


Estado 84

   31 declaracao_funcao: FUNCTION IDENT parametros_formais_vazio DOIS_PONTOS tipo • PONTO_E_VIRGULA bloco

    PONTO_E_VIRGULA  deslocar, e ir ao estado 104


Estado 85

   45 comandos: comandos PONTO_E_VIRGULA comando •

    $padrão  reduzir usando a regra 45 (comandos)


Estado 86

   75 comando_repetitivo: WHILE $@19 • expressao DO $@20 comando_composto

    $padrão  reduzir usando a regra 78 ($@21)

    expressao  ir ao estado 105
    $@21       ir ao estado 88


Estado 87

   61 if_then: IF expressao • $@13 THEN comando_sem_rotulo

    $padrão  reduzir usando a regra 60 ($@13)

    $@13  ir ao estado 106


Estado 88

   79 expressao: $@21 • expressao_simples relacao_exp_simples_ou_vazio

    SOMA       deslocar, e ir ao estado 107
    SUBTRACAO  deslocar, e ir ao estado 108

    $padrão  reduzir usando a regra 50 (comando_vazio)

    comando_vazio      ir ao estado 109
    expressao_simples  ir ao estado 110
    soma_ou_vazio      ir ao estado 111


Estado 89

  114 leitura: READ ABRE_PARENTESES • lista_leitura FECHA_PARENTESES

    IDENT  deslocar, e ir ao estado 112

    lista_leitura    ir ao estado 113
    simbolo_leitura  ir ao estado 114


Estado 90

  118 escrita: WRITE ABRE_PARENTESES • lista_escrita FECHA_PARENTESES

    $padrão  reduzir usando a regra 78 ($@21)

    expressao      ir ao estado 115
    $@21           ir ao estado 88
    lista_escrita  ir ao estado 116


Estado 91

   63 cond_else: ELSE • $@14 else_multiplo_unico

    $padrão  reduzir usando a regra 62 ($@14)

    $@14  ir ao estado 117


Estado 92

   59 comando_condicional: if_then cond_else •

    $padrão  reduzir usando a regra 59 (comando_condicional)


Estado 93

  111 atribuicao: ATRIBUICAO • expressao

    $padrão  reduzir usando a regra 78 ($@21)

    expressao  ir ao estado 118
    $@21       ir ao estado 88


Estado 94

  110 atribuicao_procedimento: chama_procedimento •

    $padrão  reduzir usando a regra 110 (atribuicao_procedimento)


Estado 95

   68 chama_procedimento: $@15 • ABRE_PARENTESES $@16 lista_expressoes_ou_vazio FECHA_PARENTESES $@17

    ABRE_PARENTESES  deslocar, e ir ao estado 119


Estado 96

   70 chama_procedimento: $@18 •

    $padrão  reduzir usando a regra 70 (chama_procedimento)


Estado 97

   51 comando_sem_rotulo: variavel atribuicao_procedimento •

    $padrão  reduzir usando a regra 51 (comando_sem_rotulo)


Estado 98

  109 atribuicao_procedimento: atribuicao •

    $padrão  reduzir usando a regra 109 (atribuicao_procedimento)


Estado 99

   30 declaracao_procedimento: PROCEDURE $@5 IDENT $@6 $@7 parametros_formais_vazio • PONTO_E_VIRGULA $@8 bloco

    PONTO_E_VIRGULA  deslocar, e ir ao estado 120


Estado 100

   35 parametros_formais: ABRE_PARENTESES $@9 lista_parametros_formais FECHA_PARENTESES •

    $padrão  reduzir usando a regra 35 (parametros_formais)


Estado 101

   36 lista_parametros_formais: lista_parametros_formais PONTO_E_VIRGULA • secao_parametros_formais

    $padrão  reduzir usando a regra 39 ($@11)

    secao_parametros_formais  ir ao estado 121
    $@11                      ir ao estado 103


Estado 102

   38 lista_parametros_formais: $@10 secao_parametros_formais •

    $padrão  reduzir usando a regra 38 (lista_parametros_formais)


Estado 103

   41 secao_parametros_formais: $@11 • var_vazio $@12 lista_idents DOIS_PONTOS tipo

    VAR  deslocar, e ir ao estado 122

    $padrão  reduzir usando a regra 50 (comando_vazio)

    var_vazio      ir ao estado 123
    comando_vazio  ir ao estado 124


Estado 104

   31 declaracao_funcao: FUNCTION IDENT parametros_formais_vazio DOIS_PONTOS tipo PONTO_E_VIRGULA • bloco

    VAR  deslocar, e ir ao estado 15

    $padrão  reduzir usando a regra 19 ($@3)
